[gd_scene load_steps=17 format=3 uid="uid://bat8rpjxdmavc"]

[ext_resource type="Script" path="res://scenes/inventory_slot.gd" id="1_b3sf3"]
[ext_resource type="Texture2D" uid="uid://x6vrdemky7j7" path="res://assets/character_images/FeralHogs.png" id="2_b5b6c"]
[ext_resource type="Texture2D" uid="uid://bi23461yfd5oc" path="res://assets/character_images/BadGuy.png" id="2_dtsw6"]
[ext_resource type="Texture2D" uid="uid://ea264ullhfo5" path="res://assets/character_images/Guy.png" id="3_yhtih"]
[ext_resource type="Texture2D" uid="uid://owga2c3fmglu" path="res://assets/character_images/UchihaAkira.png" id="5_k6tcy"]
[ext_resource type="Texture2D" uid="uid://dp3k2fhxf3r0d" path="res://assets/character_images/UchihaItami.png" id="6_p0nnd"]
[ext_resource type="Texture2D" uid="uid://dyiii4y35dcer" path="res://assets/character_images/SenjuTarashi.png" id="7_mdnuv"]
[ext_resource type="Texture2D" uid="uid://covqhp67oxm8c" path="res://assets/character_images/UchihaSetsuna.png" id="8_x0425"]
[ext_resource type="Texture2D" uid="uid://cskwhqgeixman" path="res://assets/character_images/HyugaHeika.png" id="9_kihri"]
[ext_resource type="Texture2D" uid="uid://crn250p63axhw" path="res://assets/character_images/Hotdog.png" id="10_gy5ga"]
[ext_resource type="Texture2D" uid="uid://x0ukntab74md" path="res://assets/overlays/COverlay.png" id="11_rviv3"]
[ext_resource type="Texture2D" uid="uid://c7la8pcnk1mia" path="res://assets/overlays/ROverlay.png" id="12_py3a5"]
[ext_resource type="Texture2D" uid="uid://csw1d5dpb21pi" path="res://assets/overlays/SROverlay.png" id="13_pxexu"]
[ext_resource type="Texture2D" uid="uid://bgh26kdjmuwug" path="res://assets/overlays/UROverlay.png" id="14_38ak3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_ofqtv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_b5b6c")
}, {
"duration": 1.0,
"texture": ExtResource("3_yhtih")
}, {
"duration": 1.0,
"texture": ExtResource("2_dtsw6")
}, {
"duration": 1.0,
"texture": ExtResource("5_k6tcy")
}, {
"duration": 1.0,
"texture": ExtResource("6_p0nnd")
}, {
"duration": 1.0,
"texture": ExtResource("7_mdnuv")
}, {
"duration": 1.0,
"texture": ExtResource("8_x0425")
}, {
"duration": 1.0,
"texture": ExtResource("9_kihri")
}, {
"duration": 1.0,
"texture": ExtResource("10_gy5ga")
}],
"loop": true,
"name": &"Units",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_js4ww"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_rviv3")
}, {
"duration": 1.0,
"texture": ExtResource("12_py3a5")
}, {
"duration": 1.0,
"texture": ExtResource("13_pxexu")
}, {
"duration": 1.0,
"texture": ExtResource("14_38ak3")
}],
"loop": true,
"name": &"Borders",
"speed": 5.0
}]

[node name="Inventory_Slot" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchor_right = 0.226
anchor_bottom = 0.111
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b3sf3")

[node name="InnerBorder" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = -9.72
offset_bottom = -8.84
grow_horizontal = 2
grow_vertical = 2

[node name="UnitIcon" type="AnimatedSprite2D" parent="InnerBorder"]
position = Vector2(76.5125, 76.2625)
scale = Vector2(0.372733, 0.376511)
sprite_frames = SubResource("SpriteFrames_ofqtv")
animation = &"Units"
speed_scale = 0.0

[node name="UnitBorder" type="AnimatedSprite2D" parent="InnerBorder"]
position = Vector2(75.5, 106.5)
scale = Vector2(0.340694, 0.334444)
sprite_frames = SubResource("SpriteFrames_js4ww")
animation = &"Borders"
speed_scale = 0.0

[node name="UsagePanel" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 153.0
offset_bottom = 151.0
color = Color(1, 1, 1, 0)

[node name="TrainingButton" type="Button" parent="UsagePanel"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -55.0
offset_right = 55.0
offset_bottom = 37.0
grow_horizontal = 2
text = "Training"

[node name="AwakeningButton" type="Button" parent="UsagePanel"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.0
offset_top = -18.5
offset_right = 55.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
text = "Awakening"

[node name="SellButton" type="Button" parent="UsagePanel"]
custom_minimum_size = Vector2(110, 40)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -55.0
offset_top = -37.0
offset_right = 55.0
grow_horizontal = 2
grow_vertical = 0
text = "Sell"

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_right = 150.0
offset_bottom = 150.0
mouse_filter = 1
color = Color(1, 1, 1, 0)

[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_exited" from="UsagePanel" to="." method="_on_usage_panel_mouse_exited"]
[connection signal="pressed" from="UsagePanel/SellButton" to="." method="_on_sell_button_pressed"]
[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
